z-index fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,6 +140,7 @@ body {
     color: #FFF; }
   .linkNote .quickLinks:hover .quickDropdown {
     opacity: 1;
+    z-index: 1;
     transition: .5s; }
 
 /*----------------------------------------*/
@@ -289,6 +290,7 @@ footer {
 .tools {
   display: flex;
   width: 30%;
+  z-index: 1;
   margin: auto 0px;
   color: #D9D9D9; }
 
@@ -808,6 +810,7 @@ footer {
   bottom: 10%;
   left: 20%;
   right: 20%;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.6); }
 
 .newsfeed {
@@ -863,6 +866,7 @@ footer {
   overflow: hidden;
   width: 220px;
   height: 180px;
+  z-index: 0;
   outline: 1px solid transparent;
   border: 1px solid #7da4d7;
   border-radius: 10px; }
